[gd_scene load_steps=5 format=2]

[ext_resource path="res://themes/theme.tres" type="Theme" id=1]
[ext_resource path="res://levels/background/bg_02.png" type="Texture" id=2]
[ext_resource path="res://player/harpoon/latch.wav" type="AudioStream" id=3]
[ext_resource path="res://options_screen/options_screen.gd" type="Script" id=4]

[node name="OptionsScreen" type="Node"]
script = ExtResource( 4 )

[node name="Bg02" type="Sprite" parent="."]
position = Vector2( 147, 305 )
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 161.0
margin_bottom = 190.0
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="MusicVolume" type="HBoxContainer" parent="MarginContainer/Options"]
margin_right = 151.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="MarginContainer/Options/MusicVolume"]
margin_top = 2.0
margin_right = 59.0
margin_bottom = 15.0
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/Options/MusicVolume"]
margin_left = 63.0
margin_right = 143.0
margin_bottom = 18.0
rect_min_size = Vector2( 80, 0 )
min_value = -1.0
max_value = 10.0
value = 3.0

[node name="SoundsVolume" type="HBoxContainer" parent="MarginContainer/Options"]
margin_top = 22.0
margin_right = 151.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer/Options/SoundsVolume"]
margin_top = 2.0
margin_right = 67.0
margin_bottom = 15.0
text = "Sounds Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/Options/SoundsVolume"]
margin_left = 71.0
margin_right = 151.0
margin_bottom = 18.0
rect_min_size = Vector2( 80, 0 )
min_value = -1.0
max_value = 10.0
value = 3.0

[node name="ShowTips" type="HBoxContainer" parent="MarginContainer/Options"]
margin_top = 44.0
margin_right = 151.0
margin_bottom = 66.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/Options/ShowTips"]
margin_right = 22.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="MarginContainer/Options/ShowTips"]
margin_left = 26.0
margin_top = 4.0
margin_right = 70.0
margin_bottom = 17.0
text = "Show tips"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 218.0
margin_top = 171.0
margin_right = 246.0
margin_bottom = 190.0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 28.0
margin_bottom = 19.0
text = "Back"

[node name="ChangedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Sounds"

[connection signal="value_changed" from="MarginContainer/Options/MusicVolume/HSlider" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/Options/SoundsVolume/HSlider" to="." method="_on_sound_value_changed"]
[connection signal="toggled" from="MarginContainer/Options/ShowTips/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
